lei20_21_s4_2dl_02/HelpdeskService/helpdesk.core/src/main/java/eapli/helpdesk/antlr/formValidation/FormValidationGrammarParser.java
// Generated from C:/Users/Admin/Desktop/Repositorio/HelpdeskService/helpdesk.core/src/main/java/eapli/helpdesk/antlr/formValidation\FormValidationGrammar.g4 by ANTLR 4.9.1
package eapli.helpdesk.antlr.formValidation;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FormValidationGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, PONTO_E_VIRGULA=9, 
		ValorBooleano=10, Tipo=11, EstadoString=12, Obrigatoriedade=13, OperadorLogico=14, 
		Igual_Diferente=15, OperadorCondicional=16, Operador=17, String=18, Inteiro=19, 
		WS=20;
	public static final int
		RULE_start = 0, RULE_ifCondition = 1, RULE_statement = 2, RULE_dados = 3, 
		RULE_specs = 4, RULE_intervalo = 5, RULE_condicoesDados = 6, RULE_condicoes = 7, 
		RULE_verify = 8, RULE_condicao = 9, RULE_condicaoString = 10, RULE_stringEntreAspas = 11, 
		RULE_valString = 12, RULE_valInt = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "ifCondition", "statement", "dados", "specs", "intervalo", "condicoesDados", 
			"condicoes", "verify", "condicao", "condicaoString", "stringEntreAspas", 
			"valString", "valInt"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'then'", "'tamanho: '", "'esta entre '", "'-> '", "'e'", 
			"':'", "'\"'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "PONTO_E_VIRGULA", 
			"ValorBooleano", "Tipo", "EstadoString", "Obrigatoriedade", "OperadorLogico", 
			"Igual_Diferente", "OperadorCondicional", "Operador", "String", "Inteiro", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FormValidationGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FormValidationGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public IfConditionContext ifCondition() {
			return getRuleContext(IfConditionContext.class,0);
		}
		public SpecsContext specs() {
			return getRuleContext(SpecsContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormValidationGrammarVisitor ) return ((FormValidationGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		return start(0);
	}

	private StartContext start(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		StartContext _localctx = new StartContext(_ctx, _parentState);
		StartContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_start, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			}
			_ctx.stop = _input.LT(-1);
			setState(35);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(33);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						_localctx = new StartContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_start);
						setState(29);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(30);
						ifCondition();
						}
						break;
					case 2:
						{
						_localctx = new StartContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_start);
						setState(31);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(32);
						specs();
						}
						break;
					}
					} 
				}
				setState(37);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class IfConditionContext extends ParserRuleContext {
		public CondicoesContext condicoes() {
			return getRuleContext(CondicoesContext.class,0);
		}
		public DadosContext dados() {
			return getRuleContext(DadosContext.class,0);
		}
		public TerminalNode PONTO_E_VIRGULA() { return getToken(FormValidationGrammarParser.PONTO_E_VIRGULA, 0); }
		public IfConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifCondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).enterIfCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).exitIfCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormValidationGrammarVisitor ) return ((FormValidationGrammarVisitor<? extends T>)visitor).visitIfCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfConditionContext ifCondition() throws RecognitionException {
		IfConditionContext _localctx = new IfConditionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ifCondition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(T__0);
			setState(39);
			condicoes(0);
			setState(40);
			match(T__1);
			setState(41);
			dados(0);
			setState(42);
			match(PONTO_E_VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public IfConditionContext ifCondition() {
			return getRuleContext(IfConditionContext.class,0);
		}
		public VerifyContext verify() {
			return getRuleContext(VerifyContext.class,0);
		}
		public SpecsContext specs() {
			return getRuleContext(SpecsContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormValidationGrammarVisitor ) return ((FormValidationGrammarVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(47);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(44);
				ifCondition();
				}
				break;
			case OperadorLogico:
			case Igual_Diferente:
				enterOuterAlt(_localctx, 2);
				{
				setState(45);
				verify();
				}
				break;
			case Inteiro:
				enterOuterAlt(_localctx, 3);
				{
				setState(46);
				specs();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DadosContext extends ParserRuleContext {
		public IfConditionContext ifCondition() {
			return getRuleContext(IfConditionContext.class,0);
		}
		public SpecsContext specs() {
			return getRuleContext(SpecsContext.class,0);
		}
		public CondicoesDadosContext condicoesDados() {
			return getRuleContext(CondicoesDadosContext.class,0);
		}
		public DadosContext dados() {
			return getRuleContext(DadosContext.class,0);
		}
		public DadosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dados; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).enterDados(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).exitDados(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormValidationGrammarVisitor ) return ((FormValidationGrammarVisitor<? extends T>)visitor).visitDados(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DadosContext dados() throws RecognitionException {
		return dados(0);
	}

	private DadosContext dados(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		DadosContext _localctx = new DadosContext(_ctx, _parentState);
		DadosContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_dados, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(50);
				ifCondition();
				}
				break;
			case 2:
				{
				setState(51);
				specs();
				}
				break;
			case 3:
				{
				setState(52);
				condicoesDados();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(63);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(61);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new DadosContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_dados);
						setState(55);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(56);
						condicoesDados();
						}
						break;
					case 2:
						{
						_localctx = new DadosContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_dados);
						setState(57);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(58);
						specs();
						}
						break;
					case 3:
						{
						_localctx = new DadosContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_dados);
						setState(59);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(60);
						ifCondition();
						}
						break;
					}
					} 
				}
				setState(65);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class SpecsContext extends ParserRuleContext {
		public SpecsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specs; }
	 
		public SpecsContext() { }
		public void copyFrom(SpecsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ValorObrigatorioContext extends SpecsContext {
		public TerminalNode Inteiro() { return getToken(FormValidationGrammarParser.Inteiro, 0); }
		public TerminalNode Obrigatoriedade() { return getToken(FormValidationGrammarParser.Obrigatoriedade, 0); }
		public ValorObrigatorioContext(SpecsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).enterValorObrigatorio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).exitValorObrigatorio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormValidationGrammarVisitor ) return ((FormValidationGrammarVisitor<? extends T>)visitor).visitValorObrigatorio(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TamanhoValorContext extends SpecsContext {
		public List<TerminalNode> Inteiro() { return getTokens(FormValidationGrammarParser.Inteiro); }
		public TerminalNode Inteiro(int i) {
			return getToken(FormValidationGrammarParser.Inteiro, i);
		}
		public TerminalNode PONTO_E_VIRGULA() { return getToken(FormValidationGrammarParser.PONTO_E_VIRGULA, 0); }
		public TamanhoValorContext(SpecsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).enterTamanhoValor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).exitTamanhoValor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormValidationGrammarVisitor ) return ((FormValidationGrammarVisitor<? extends T>)visitor).visitTamanhoValor(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValorEntreContext extends SpecsContext {
		public TerminalNode Inteiro() { return getToken(FormValidationGrammarParser.Inteiro, 0); }
		public IntervaloContext intervalo() {
			return getRuleContext(IntervaloContext.class,0);
		}
		public ValorEntreContext(SpecsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).enterValorEntre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).exitValorEntre(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormValidationGrammarVisitor ) return ((FormValidationGrammarVisitor<? extends T>)visitor).visitValorEntre(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecsContext specs() throws RecognitionException {
		SpecsContext _localctx = new SpecsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_specs);
		try {
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new TamanhoValorContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				match(Inteiro);
				setState(67);
				match(T__2);
				setState(68);
				match(Inteiro);
				setState(69);
				match(PONTO_E_VIRGULA);
				}
				break;
			case 2:
				_localctx = new ValorEntreContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				match(Inteiro);
				setState(71);
				match(T__3);
				setState(72);
				intervalo();
				}
				break;
			case 3:
				_localctx = new ValorObrigatorioContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				match(Inteiro);
				setState(74);
				match(T__4);
				setState(75);
				match(Obrigatoriedade);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntervaloContext extends ParserRuleContext {
		public List<TerminalNode> Inteiro() { return getTokens(FormValidationGrammarParser.Inteiro); }
		public TerminalNode Inteiro(int i) {
			return getToken(FormValidationGrammarParser.Inteiro, i);
		}
		public IntervaloContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intervalo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).enterIntervalo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).exitIntervalo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormValidationGrammarVisitor ) return ((FormValidationGrammarVisitor<? extends T>)visitor).visitIntervalo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntervaloContext intervalo() throws RecognitionException {
		IntervaloContext _localctx = new IntervaloContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_intervalo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(Inteiro);
			setState(79);
			match(T__5);
			setState(80);
			match(Inteiro);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicoesDadosContext extends ParserRuleContext {
		public CondicoesContext condicoes() {
			return getRuleContext(CondicoesContext.class,0);
		}
		public TerminalNode PONTO_E_VIRGULA() { return getToken(FormValidationGrammarParser.PONTO_E_VIRGULA, 0); }
		public CondicoesDadosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicoesDados; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).enterCondicoesDados(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).exitCondicoesDados(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormValidationGrammarVisitor ) return ((FormValidationGrammarVisitor<? extends T>)visitor).visitCondicoesDados(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicoesDadosContext condicoesDados() throws RecognitionException {
		CondicoesDadosContext _localctx = new CondicoesDadosContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_condicoesDados);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			condicoes(0);
			setState(83);
			match(PONTO_E_VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicoesContext extends ParserRuleContext {
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public CondicoesContext condicoes() {
			return getRuleContext(CondicoesContext.class,0);
		}
		public TerminalNode OperadorCondicional() { return getToken(FormValidationGrammarParser.OperadorCondicional, 0); }
		public TerminalNode PONTO_E_VIRGULA() { return getToken(FormValidationGrammarParser.PONTO_E_VIRGULA, 0); }
		public CondicoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).enterCondicoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).exitCondicoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormValidationGrammarVisitor ) return ((FormValidationGrammarVisitor<? extends T>)visitor).visitCondicoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicoesContext condicoes() throws RecognitionException {
		return condicoes(0);
	}

	private CondicoesContext condicoes(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		CondicoesContext _localctx = new CondicoesContext(_ctx, _parentState);
		CondicoesContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_condicoes, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(86);
			condicao();
			}
			_ctx.stop = _input.LT(-1);
			setState(95);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new CondicoesContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_condicoes);
					setState(88);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(89);
					match(OperadorCondicional);
					setState(90);
					condicao();
					setState(91);
					match(PONTO_E_VIRGULA);
					}
					} 
				}
				setState(97);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class VerifyContext extends ParserRuleContext {
		public TerminalNode OperadorLogico() { return getToken(FormValidationGrammarParser.OperadorLogico, 0); }
		public TerminalNode Igual_Diferente() { return getToken(FormValidationGrammarParser.Igual_Diferente, 0); }
		public VerifyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_verify; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).enterVerify(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormValidationGrammarListener ) ((FormValidationGrammarListener)listener).exitVerify(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormValidationGrammarVisitor ) return ((FormValidationGrammarVisitor<? extends T>)visitor).visitVerify(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VerifyContext verify() throws RecognitionException {
		VerifyContext _localctx = new VerifyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_verify);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_la = _input.LA(1);
			if ( !(_la==OperadorLogico || _la==Igual_Diferente) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
